<resources>
    <string name="app_name">INTENT_DEMO</string>
    <string name="login_successful_message">Login Successful</string>
    <string name="login_successful">Welcome, %1$s!</string>
    <string name="enter_both">Please enter both username and password</string>
    <string name="login_failed">Invalid username or password</string>
    <string name="ok">OK</string>
    <string name="battery_info">Battery Info</string>
    <string name="google">Google</string>
    <string name="camera">Camera</string>
    <string name="contacts">Contacts</string>
    <string name="dialer">Dialer</string>
    <string name="phonebook">Phonebook</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_music">Start Music</string>
    <string name="stop_music">Stop Music</string>
    <string name="logout">Logout</string>
    <string name="start_download">Start Download</string>
    <string name="battery_level">Battery Level: %1$d%%</string>
    <string name="charging_status">Charging: %1$s</string>
    <string name="back">Back</string>
</resources>